[package]
name = "esm"
version = "2.0.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "esm_client"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "esm_bin"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arma-rs = { version = "1.7.0", features = ["uuid", "serde_json", "chrono"] }
url = "2.0.0"
base64 = "0.12.3"
log = "0.4.11"
lazy_static = "1.4.0"
crossbeam-channel = "0.4.4"
log4rs = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
rust-ini = "0.16.1"
esm_message = { git = "https://github.com/WolfkillArcadia/esm_message.git", branch = "main" }
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
parking_lot = "0.10"
bincode = "1.3.1"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
mysql = "*"

[dev-dependencies]
pretty_assertions = "0.6.1"
regex = "1"

[build-dependencies]
vergen = { version = "5", default-features = false, features = ["git"] }
