[package]
name = "esm"
version = "2.0.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

[lib]
name = "esm_arma"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "esm_bin"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
serde_json = "1.0"
arma-rs = { version = "1.7", features = ["uuid", "serde_json", "chrono"] }
url = "2.0.0"
base64 = "0.12.3"
log = "0.4.11"
lazy_static = "1.4.0"
crossbeam-channel = "0.4.4"
log4rs = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
rust-ini = "0.16.1"
esm_message = { git = "https://github.com/WolfkillArcadia/esm_message.git", branch = "main" }
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
serde_yaml = "0.8"
uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
mysql = "*"

[dev-dependencies]
pretty_assertions = "0.6.1"
regex = "1"
