[package]
name = "esm"
version = "0.1.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
ws = "*"
url = "2.0.0"
base64 = "0.12.3"
log = "0.4.11"
env_logger = "0.7.1"
lazy_static = "1.4.0"
