[package]
name = "esm"
version = "2.0.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

[lib]
name = "esm_arma"
crate-type = ["cdylib", "rlib"]

# [[bin]]
# name = "esm_bin"
# path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arma-rs = { version = "1.10", features = ["uuid", "serde_json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
esm_message = { path = "../message/message" }
harsh = "0.2.2"
lazy_static = "1.4.0"
log = "*"
log4rs = "*"
message-io = { version = "0.18", default-features = false, features = ["tcp"] }
mysql_async = "0.34"
parking_lot = { version = "0.12.1", features = ["serde", "deadlock_detection"] }
rand = "*"
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["serde", "v4", "fast-rng"] }
openssl = "0.10"
base64 = "0.22"
flate2 = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
regex = "1"

[dependencies.mysql_common]
version = "0.32.1"
features = ["chrono"]
