[package]
name = "esm"
version = "2.0.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

[lib]
name = "esm_arma"
crate-type = ["cdylib", "rlib"]

# [[bin]]
# name = "esm_bin"
# path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arma-rs = { version = "1", features = ["uuid", "serde_json", "chrono"] }
chrono = { version = "0", features = ["serde"] }
harsh = "0"
lazy_static = "1"
log = "*"
log4rs = "*"
message-io = { version = "0", default-features = false, features = ["tcp"] }
mysql_async = "0"
parking_lot = { version = "0", features = ["serde", "deadlock_detection"] }
rand = "*"
rust-ini = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
serde_repr = "0"
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
openssl = "0"
base64 = "0"
flate2 = "1"
num-format = "0"
unicode-segmentation = "1"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.8"

[dependencies.mysql_common]
version = "0.32"
features = ["chrono"]

[features]
# Using features to control environments
development = []
test = []
