[package]
name = "esm_message"
version = "1.0.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
arma-rs = { version = "1.10", features = ["uuid", "serde_json", "chrono"] }
unicode-segmentation = "1.11.0"
arma-rs-proc = { git="https://github.com/BrettMayson/arma-rs", version = "1.10" }
