[package]
name = "build_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = "0.7.1"
uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
serde = "1.0.137"
serde_yaml = "0.8.24"
