[package]
name = "build_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
bincode = "1.3.3"
serde = "1.0.137"
clap = { version = "3.1.18", features = ["derive", "color"] }
colored = "2"
lazy_static = "1.4.0"
parking_lot = "0.10"
regex = "1.5.6"
serde_yaml = "0.8.24"
vfs = "0.7.1"
uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
build_common = { path = "../build_common" }
