[package]
name = "build_receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
bincode = "1.3.3"
serde = "1.0.137"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2"
lazy_static = "1.4.0"
