[package]
name = "esm_message"
version = "1.0.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
arma-rs = { version = "1.7.0", features = ["uuid", "serde_json", "chrono"] }
message_proc = { path = "../message_proc" }
unicode-segmentation = "1.11.0"
