[package]
name = "message_proc"
description = "proc macros for esm_message"
version = "1.0.0"
edition = "2021"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
repository = "https://github.com/itsthedevman/esm_message"
license = ""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
darling = "0.20.8"
